fix(acccesories): dupe crab hat
